[package]
version = "0.1.0"
authors = [
  "Jingyu liu <liujingyu24s@ict.ac.cn>",
]
categories = ["os", "no-std"]
edition = "2021"
keywords = ["hypervisor", "kernel", "vplic"]
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
name = "riscv_vplic"
repository = "https://github.com/arceos-hypervisor/riscv_vplic"
description = "RISCV Virtual PLIC implementation."

[features]
default = []

[dependencies]
axaddrspace = {path = "../axaddrspace"}
axdevice_base = {path = "../axdevice_base"}
axvisor_api = {path = "../axvisor_api"}

axerrno = "0.1.0"
bitmaps = {version = "3.2", default-features = false}
log = "0.4"
spin = "0.9"

riscv-h = "0.1"

[target.'cfg(target_arch = "riscv64")'.dependencies]
axplat-riscv64-qemu-virt = {path = "../../platform/riscv64-qemu-virt"}